--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -9,19 +9,17 @@
 </div>
 <div>
   <div class='calendar'>
-    <% @week_days.each do |day| %>
-      <div class='item'>
-        <div class='date'>
-          <% day[:month] %>/<% day[:date] %>
-        </div>
-        <ul class='content'>
-        <% if day[:plans].length != 0 %>
-          <% day[:plans].each do |plan| %>
-            <li class='plan-list'>・<%= plan %></li>
-          <% end %>
+  <% @week_days.each do |day| %>
+  <div class='item'>
+    <div class='date'>
+      <%= "#{day[:month]}/#{day[:date]}(#{day[:wday]})" %>
+    </div>
+    <ul class='content'>
+      <% if day[:plans].length != 0 %>
+        <% day[:plans].each do |plan| %>
+          <li class='plan-list'>・<%= plan %></li>
         <% end %>
-        </ul>
-      </div>
-    <% end %>
+      <% end %>
+    </ul>
   </div>
-</div>
+<% end %>
